@@ -18,6 +18,6 @@ java -jar ../zipkin/zipkin.jar
 
 
 sleep 1
-#nohup java -jar ../spring-boot-api-rpc/target/spring-boot-api-rpc-0.0.1-SNAPSHOT.jar &
-#nohup java -jar ../spring-cloud-gateway/target/spring-cloud-gateway-0.0.1-SNAPSHOT.jar &
+#nohup java -server -XX:+UseParallelGC -XX:+UseNUMA -Xms2G -Xmx2G  -XX:-UseBiasedLocking -XX:+UseStringDeduplication -jar ../spring-boot-api-rpc/target/spring-boot-api-rpc-0.0.1-SNAPSHOT.jar &
+#nohup java -server -XX:+UseParallelGC -XX:+UseNUMA -Xms2G -Xmx2G  -XX:-UseBiasedLocking -XX:+UseStringDeduplication -jar ../spring-cloud-gateway/target/spring-cloud-gateway-0.0.1-SNAPSHOT.jar &
 
